--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.22.208.80:9000//</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>squ_c199529ec7531ca3f408399006678a25be4835a0</sonar.password> 
+		<sonar.host.url>http://3.22.208.80:9000/</sonar.host.url>
+		<sonar.login>squ_c199529ec7531ca3f408399006678a25be4835a0</sonar.login>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
