--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <name>walmart Releases Nexus Repository</name>
 	      <url>http://3.143.209.86:9980/tejaswini/repository/walmart-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <name>walmart Snapshot Nexus Repository </name>
 	      <url>http://3.143.209.86:9980/tejaswini/repository/walmart-snapshots/</url>
 	    </snapshotRepository>
 	    
